# RawSalmonEngine

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  COMPILATION  How_to_build.txt  README.md  agenda.txt  compile_instructions  libSalmon_objecttypes.xml
cmake/: FindB64.cmake  FindTinyXML2.cmake  clean_up.sh  compile.sh  fetch_dev_dependencies.sh  linux32-toolchain.cmake  linux64-toolchain.cmake  pack-linux32.sh  pack-linux64.sh  pack-win32.sh  pack-win64.sh  pack_artifacts.sh  startGame.sh  win32-toolchain.cmake  win64-toolchain.cmake  windows32-toolchain.cmake  windows64-toolchain.cmake
data/: block_actor.tsx  events.tsx  example.tmx  example_2.tmx  example_old.tmx  key_mapping.tsx  main.tmx  main_events.tsx  naming.info  objecttypes.xml
data/actors/: actor_animation.tsx  actor_animation_small.tsx  actor_handle.tsx  actor_handle_small.tsx  coin_handle.tsx  coin_pickup.tsx  walker.tsx  walker_events.tsx  walker_keys.tsx
data/maps/: events.tsx  hex_tile.tsx  hexa_demo.tmx  hexa_demo2.tmx  iso_staggered_demo.tmx  iso_staggered_demo2.tmx  isometric.tsx  key_mapping.tsx  orthogonal_demo.tmx  orthogonal_demo2.tmx
data/tilesets/: basic_blocks.tsx  block_actor.tsx  block_animation.tsx
include/: actor.hpp  actor_ref.hpp  audio_manager.hpp  audio_manager_ref.hpp  camera.hpp  camera_ref.hpp  collision.hpp  collision_ref.hpp  data_block.hpp  data_block_ref.hpp  gameinfo.hpp  input_cache.hpp  input_cache_ref.hpp  map.hpp  map_ref.hpp  mapdata.hpp  music.hpp  music_ref.hpp  sound.hpp  sound_ref.hpp  text.hpp  text_ref.hpp  tile_instance.hpp  transform.hpp  types.hpp  window.hpp
scripts/: build.sh  clean_up.sh  compile.sh  fetch_dependencies.sh  fetch_dev_dependencies.sh  pack_artifacts.sh
source/: actor.cpp  actor.hpp  game_types.cpp  game_types.hpp  gameinfo.cpp  gameinfo.hpp  layer.cpp  layer.hpp  main.cpp  mapdata.cpp  mapdata.hpp  texture.cpp  texture.hpp  tile.cpp  tile.hpp  tileset.cpp  tileset.hpp
src/actor/: actor.cpp  actor.hpp  cause.cpp  cause.hpp  collision.cpp  collision.hpp  data_block.cpp  data_block.hpp  primitive.cpp  primitive.hpp  primitive_ellipse.hpp  primitive_line.hpp  primitive_point.hpp  primitive_polygon.hpp  primitive_rectangle.cpp  primitive_rectangle.hpp  primitive_text.cpp  primitive_text.hpp  primitive_tile.hpp  transform.cpp  transform.hpp
src/audio/: audio_manager.cpp  audio_manager.hpp  music.cpp  music.hpp  sound_effect.cpp  sound_effect.hpp
src/core/: font_manager.cpp  font_manager.hpp  gameinfo.cpp  gameinfo.hpp  gamepad.cpp  gamepad.hpp  input_cache.cpp  input_cache.hpp  input_handler.cpp  input_handler.hpp  main.cpp
src/event/: actor_event.cpp  actor_event.hpp  ae_accelerate.cpp  ae_accelerate.hpp  ae_animate.cpp  ae_animate.hpp  ae_decelerate.cpp  ae_decelerate.hpp  ae_erase_this.cpp  ae_erase_this.hpp  ae_fall.cpp  ae_fall.hpp  ae_ge_wrapper.cpp  ae_ge_wrapper.hpp  ae_jump.cpp  ae_jump.hpp  ae_me_wrapper.cpp  ae_me_wrapper.hpp  ae_move.cpp  ae_move.hpp  ae_move_direction.cpp  ae_move_direction.hpp  ae_move_static.cpp  ae_move_static.hpp  ae_move_sustained.cpp  ae_move_sustained.hpp  ae_multi.cpp  ae_multi.hpp  ae_rotate.cpp  ae_rotate.hpp  ae_set_anim_frame.cpp  ae_set_anim_frame.hpp  ae_set_var.cpp  ae_set_var.hpp  ae_sound.cpp  ae_sound.hpp  ae_spawn_actor.cpp  ae_spawn_actor.hpp  ae_spawn_text.cpp  ae_spawn_text.hpp  (+56 more)
src/graphics/: texture.cpp  texture.hpp  texture_cache.cpp  texture_cache.hpp
src/include/: actor_ref.cpp  actor_ref.hpp  camera_ref.cpp  camera_ref.hpp  data_block_ref.cpp  font_manager_ref.cpp  font_manager_ref.hpp  gameinfo.cpp  gameinfo.hpp  input_cache_ref.cpp  input_cache_ref.hpp  map_ref.cpp  map_ref.hpp
src/include_impl/: actor.cpp  actor_ref.cpp  audio_manager.cpp  audio_manager_ref.cpp  camera.cpp  camera_ref.cpp  collision.cpp  collision_ref.cpp  data_block.cpp  data_block_ref.cpp  gameinfo.cpp  input_cache.cpp  input_cache_ref.cpp  map_ref.cpp  mapdata.cpp  music.cpp  music_ref.cpp  sound.cpp  sound_ref.cpp  text.cpp  text_ref.cpp  tile_instance.cpp  transform.cpp  types.cpp  window.cpp
src/map/: camera.cpp  camera.hpp  image_layer.cpp  image_layer.hpp  layer.cpp  layer.hpp  layer_collection.cpp  layer_collection.hpp  map_layer.cpp  map_layer.hpp  mapdata.cpp  mapdata.hpp  object_layer.cpp  object_layer.hpp  primitive.cpp  primitive.hpp  primitive_ellipse.hpp  primitive_line.hpp  primitive_point.hpp  primitive_polygon.hpp  primitive_rectangle.cpp  primitive_rectangle.hpp  primitive_text.cpp  primitive_text.hpp  primitive_tile.hpp  tile.cpp  tile.hpp  tileset.cpp  tileset.hpp  tileset_collection.cpp  tileset_collection.hpp
src/util/: attribute_parser.cpp  attribute_parser.hpp  base64.cpp  base64.h  game_types.cpp  game_types.hpp  logger.cpp  logger.hpp  parse.cpp  parse.hpp  preloader.cpp  preloader.hpp  smart.hpp
